# LSPDestroyer

./: .gitignore  LICENSE  README.md  lspdestroyer.py  pyproject.toml
lspdestroyer_app/: __init__.py  app.py  cli.py  config.py  constants.py  hotkeys.py  text_utils.py  tray.py  win32.py
