[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "LSPDestroyer"
version = "0.1.3"
description = "LSPDestroyer is a Windows tray utility that types file contents into the foreground application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

[project.scripts]
lspdestroyer = "lspdestroyer_app.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lspdestroyer_app*"]

[tool.setuptools.package-data]
lspdestroyer_app = ["assets/fonts/*.ttf", "assets/icons/*.png"]
